--- a/testing.ipynb
+++ b/testing.ipynb
@@ -25,7 +25,7 @@
     "from util.misc import CSVLogger\n",
     "from util.cutout import Cutout\n",
     "\n",
-    "from model.resnet import ResNet18\n",
+    "from model.project1_model import project1_model\n",
     "\n",
     "# from pyimagesearch import config\n",
     "from torchvision.datasets import ImageFolder\n",
@@ -79,7 +79,7 @@
     "                                          num_workers=2)\n",
     "\n",
     "\n",
-    "cnn = ResNet18(num_classes=10)\n",
+    "cnn = project1_model(num_classes=10)\n",
     "cnn.load_state_dict(torch.load(\"out/channels/42/cifar10_resnet18.pt\"))\n",
     "cnn = cnn.cuda()\n",
     "def test(loader):\n",
